# superlists

./: .gitignore  Dockerfile  README.md  functional_tests.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: ci.yaml
functional_tests/: conftest.py  tests.py
infra/: deploy-playbook.yaml
lists/: tests.py  views.py
lists/migrations/: 0003_list.py
lists/templates/: base.html  home.html  list.html
src/: manage.py
src/accounts/: authentication.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_token.py
src/accounts/tests/: test_authentication.py  test_models.py  test_views.py
src/functional_tests/: conftest.py  container_commands.py  list_page.py  my_lists_page.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py  tests.py  utils.py
src/lists/: forms.py  models.py  tests.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0002_item_text.py  0004_item_list.py  0005_alter_item_unique_together.py  0006_alter_item_options.py  0007_list_owner.py  0008_list_shared_with.py
src/lists/static/: lists.js
src/lists/static/tests/: lists.test.js
src/lists/templates/: base.html  form.html  home.html  list.html  my_lists.html  share_form.html
src/lists/templates/includes/: form.html  scripts.html
src/lists/tests/: test_forms.py  test_models.py  test_views.py
src/lists/tests/forms/: test_existing_list_item_form.py  test_item_form.py  test_share_form.py
src/lists/tests/models/: test_item_model.py  test_list_model.py
src/lists/tests/views/: test_home_page.py  test_list_view.py  test_my_lists.py  test_new_list.py  test_share_view.py
src/superlists/: settings.py  urls.py
superlists/: settings.py  urls.py
