[project]
name = "testing-goat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.1",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "superlists.settings"
python_files = ["functional_tests.py", "tests.py", "tests/*.py"]
